# behavysis

./: 404.html  CLAUDE.md  CODE_RECOMMENDATIONS.md  DEEPLABCUT.yaml  DOCS_CHANGES_SUMMARY.md  README.md  SUMMARY.md  architectural_recommendations.md  cleanup.md  conda_env.yaml  configs.json  findings.md  implementation_guide.md  index.html  logging_architecture_assessment.md  objects.inv  phase1_implementation_plan.md  pyproject.toml  simba_env.yaml  sitemap.xml
.github/workflows/: check_package.yml  main.yml  publish_docs.yml
ba_pipeline/: __init__.py
ba_pipeline/behav_classifier/: __init__.py  behav_classifier.py  behav_classifier_configs.py
ba_pipeline/pipeline/: __init__.py  experiment.py  experiment_configs.py  project.py
ba_pipeline/processes/: __init__.py  analyse.py  calculate_params.py  classify_behaviours.py  evaluate.py  extract_features.py  format_vid.py  preprocess.py  run_dlc.py  update_configs.py
ba_pipeline/simba_classifier/: __init__.py  simba_classifier.py  simba_classifier_configs.py
ba_pipeline/utils/: constants.py  funcs.py
behavysis/: README.md  __init__.py  constants.py
behavysis/behav_classifier/: behav_classifier.py
behavysis/df_classes/: README.md  analysis_agg_df.py  analysis_collated_df.py  analysis_combined_df.py  analysis_df.py  behav_classifier_df.py  behav_df.py  df_mixin.py  diagnostics_df.py  features_df.py  keypoints_df.py
behavysis/models/: behav_classifier_configs.py  bouts.py
behavysis/pipeline/: experiment.py  project.py
behavysis/processes/: README.md  analyse.py  analyse_behavs.py  calculate_params.py  classify_behavs.py  combine_analysis.py  evaluate_vid.py  export.py  extract_features.py  format_vid.py  preprocess.py  run_dlc.py  update_configs.py
behavysis/pydantic_models/: behav_classifier.py  behav_classifier_configs.py  bouts.py  configs.py  experiment_configs.py  pydantic_base_model.py
behavysis/scripts/: README.md  classifier_gui.py  create_dlc_builder.py  init.py  make_project.py  project_gui.py  train_behav_model.py  train_dlc_model.py
behavysis/templates/: DEEPLABCUT.yaml  DEEPLABCUT2.yaml  default_configs.json  dlc_builder.ipynb  dlc_subproc.py  run_pipeline.py  simba_subproc.py  train_behav_model.py  train_dlc_model.py
behavysis/utils/: README.md  dask_utils.py  diagnostics_utils.py  io_utils.py  logging_utils.py  misc_utils.py  plotting_utils.py  pydantic_base_model.py  qt_utils.py  subproc_utils.py  template_utils.py
behavysis/viewer/: __main__.py
behavysis/viewer-web/: index.html  package-lock.json  package.json  vite.config.ts
behavysis_pipeline/: __init__.py  __main__.py  constants.py
behavysis_pipeline/behav_classifier/: base_behav_classifier.py  base_torch_model.py  behav_classifier.py  behav_classifier_configs.py  behav_classifier_new.py  clf_templates.py
behavysis_pipeline/df_classes/: analyse_agg_df.py  analyse_binned_df.py  analyse_combined_df.py  analyse_df.py  analysis_agg_df.py  analysis_combined_df.py  analysis_df.py  behav_classifier_df.py  behav_df.py  bouts_df.py  df_mixin.py  diagnostics_df.py  features_df.py  keypoints_df.py
behavysis_pipeline/gui/: streamlit_gui.py
behavysis_pipeline/mixins/: process_vid_mixin.py
behavysis_pipeline/pipeline/: __init__.py  experiment.py  experiment_configs.py  prefect_plugin.py  project.py
behavysis_pipeline/processes/: __init__.py  analyse.py  analyse_behav.py  analyse_behaviours.py  analyse_behavs.py  analyse_combine.py  analyse_mixin.py  analyse_mixins.py  behav_analyse.py  behaviour_analyse.py  calculate_params.py  classify_behaviours.py  classify_behavs.py  combine_analysis.py  evaluate.py  evaluate_vid.py  evaluate_vid_funcs.py  export.py  extract_features.py  format_vid.py  preprocess.py  run_dlc.py  update_configs.py
behavysis_pipeline/pydantic_models/: behav_classifier.py  behav_classifier_configs.py  bouts.py  configs.py  experiment_configs.py  pydantic_base_model.py  vid_metadata.py
behavysis_pipeline/script_templates/: default_configs.json  dlc_subproc.py  run.py  simba_subproc.py  train_behav_classifier.py
behavysis_pipeline/scripts/: classifier_gui.py  make_classifier.py  make_project.py  project_gui.py  train_behav_model.py  train_dlc_model.py
behavysis_pipeline/templates/: default_configs.json  dlc_subproc.py  run_pipeline.py  run_project.py  simba_subproc.py  train_behav_classifier.py  train_behav_model.py  train_dlc_model.py
behavysis_pipeline/utils/: dask_utils.py  diagnostics_utils.py  io_utils.py  logging_utils.py  misc_utils.py  multiproc_utils.py  plotting_utils.py  subproc_utils.py  (+1 more)
diagnostics/: importExperiments.csv.csv
docs/: mkdocs.yml
documentation/: mkdocs.yml
example/: default.json  run.py  test_analysis.py  test_simba_training.py  testing_train.ipynb  training.py
examples/: analysis.html  train.html
installation/: installing.html  running.html  uninstalling.html  updating.html
reference/: behav_classifier.html  behav_classifier_templates.html  behavysis_pipeline.html  experiment.html  processes.html  project.html
search/: search_index.js  search_index.json
test/: __init__.py  test_all.py  test_fixtures.py  test_pipeline_run.py
tests/: __init__.py  test_all.py  test_pipeline_run.py
tutorials/: configs_json.html  diagnostics_messages.html  explanation.html  setup.html
(+246 files in other folders)
