[project]
name = "behavysis"
version = "0.1.24"
description = "An animal behaviour processing and analysis package"
authors = [{ name = "BowenLab" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "dask[complete]>=2025.5.1",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "natsort>=8.4.0",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "tables>=3.10.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://tlee08.github.io/behavysis"
Repository = "https://github.com/tlee08/behavysis"
Documentation = "https://tlee08.github.io/behavysis"

[project.scripts]
behavysis_init = "behavysis.scripts.init:main"
behavysis_make_project = "behavysis.scripts.make_project:main"
behavysis_project_gui = "behavysis.scripts.project_gui:run_script"
behavysis_viewer = "behavysis.viewer.__main__:main"
behavysis_make_dlc_builder = "behavysis.scripts.make_dlc_builder:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.16",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "torch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
