[project]
name = "behavysis"
version = "0.1.24"
description = "An animal behaviour processing and analysis package"
authors = [{ name = "BowenLab" }]
requires-python = ">=3.12"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "dask[complete]>=2026.1.2",
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "natsort>=8.4.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tables>=3.11.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://tlee08.github.io/behavysis"
Repository = "https://github.com/tlee08/behavysis"
Documentation = "https://tlee08.github.io/behavysis"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.5",
    "mkdocstrings-python>=2.0.3",
    "pymdown-extensions>=10.21",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[project.scripts]
behavysis-init = "behavysis.scripts.init:main"
behavysis-make-project = "behavysis.scripts.make_project:main"
behavysis-project-gui = "behavysis.scripts.project_gui:run_script"
behavysis-viewer = "behavysis.viewer.__main__:main"
behavysis-make-dlc-builder = "behavysis.scripts.make_dlc_builder:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",
    "BLE001",
    "RET504",
    "TRY300",
    "TC003",
    "TC001",
    "TC002",
    "COM812",
    "ARG003",
    "D100",
    "PLR0913",
    "ARG002",
    "S101",
    "ANN002",
    "ANN003",
    "PIE796",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"
